warning
RUDP_Receiver.c:57:35: error: ‘client_addr’ undeclared (first use in this function); did you mean ‘inet_addr’?
   57 |     if (handle_handshake(sockfd, &client_addr, &client_len) < 0) {
      |                                   ^~~~~~~~~~~
      |                                   inet_addr
RUDP_Receiver.c:57:35: note: each undeclared identifier is reported only once for each function it appears in
RUDP_Receiver.c:57:49: error: ‘client_len’ undeclared (first use in this function)
   57 |     if (handle_handshake(sockfd, &client_addr, &client_len) < 0) {


